Fix spacing between hero and narrative blocks

--- a/src/components/Global/Hero/HeroImageRight/index.scss
+++ b/src/components/Global/Hero/HeroImageRight/index.scss
@@ -1,8 +1,13 @@
 .hero-image-right {
   .component-narrative-block {
     padding-top: 150px;
+
     h2 {
       font-size: 61px;
     }
   }
+}
+
+.hero-image-right+.component-narrative-block {
+  padding-top: 30px;
 }
